--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: cornsilk;
+    background-color: aliceblue;
 }
 
 .container {
@@ -17,4 +17,20 @@ body {
     background-color: lightgrey;
     width: 300px;
     height: 300px;
+}
+
+.btn {
+    background-color: slateblue;
+    border: none;
+    padding: 10px 20px;
+    margin: 20px;
+    color: white;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0,0,0, 0.3);
+    cursor: pointer;
+
+}
+
+.btn:hover {
+    opacity: .9;
 }
